--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
     通过在不同领域的数据集上的实验结果证明了该方法的有效性。
 
 
-    \chinesekeyword{文档级关系抽取，依赖语法树，依存语法树，语法树融合}
+    \chinesekeyword{文档级关系抽取，依赖语法树，依存语法树，信息抽取}
 \end{chineseabstract}
 
 \begin{englishabstract}
@@ -41,17 +41,28 @@
     The experimental results on datasets from various domains demonstrate the effectiveness of the proposed method.
 
 
-    \englishkeyword{Document-level Relation Extraction, Constituency Syntax, Dependency Syntax, Syntax Tree Fusion}
+    \englishkeyword{Document-level Relation Extraction, Constituency Syntax, Dependency Syntax, Information Extraction}
 \end{englishabstract}
 
 \thesistableofcontents
 
 \chapter{绪\hspace{6pt}论}
 
+\section{研究的背景}
 \begin{comment}
     课题背景，研究现状, 理论依据，实验基础，发展趋势以及本课题的理论意义
 \end{comment}
-\section{研究的背景}
+
+% 两页
+
+% 关系抽取介绍，包括背景和最近从句子级转移到文档级关系抽取
+
+% 现在关系抽取的主要方法和存在的一些缺陷
+
+% 语法方法是如何帮助文档级关系抽取的，我们的方法大体是怎么做的
+
+% 总结，我们的贡献
+
 关系提取是信息提取中的一项关键任务，旨在对非结构化文本中实体对之间的关系模式进行建模。
 有两种特定的场景：句子级关系提取和文档级关系提取。
 与句子级关系提取 \cite{sentenceRE-Dixit, sentenceRE-Lyu} 不同，文档级关系提取识别文档中实体对之间的关系标签。
@@ -86,24 +97,65 @@
 also: 图表的标注先写在图表的上方，明天再次询问这个问题
 \end{comment}
 \chapter{关系抽取研究}
+
+\section{句子级关系抽取}
+% 一页，回顾关系抽取的历史和句子级关系抽取的方法
+
+\section{文档级关系抽取}
+
+\subsection{文档级关系抽取的预测目标}
+% 一页
+
+\subsection{基于序列的文档级关系抽取}
+% 三页
+
+\subsection{基于注意力机制的文档级关系抽取}
+% 三页
+
+\subsection{基于语法树的文档级关系抽取}
+% 三页
+\section{本章小结}
 \newpage
 1
 
 \newpage
 
-\chapter{语法信息研究}
-\newpage
-1
-\newpage
 \chapter{基于语法树的文档级关系抽取研究}
+% 说明文字和方法图表， 一页
+
+\section{基于依存语法树的文档级关系抽取}
+% 两页
+
+\section{基于依赖语法树的文档级关系抽取}
+% 两页
+
+\section{融合两种不同语法树结果的文档级关系抽取}
+% 两页
+
+\section{本章小结}
 \newpage
 1
 \newpage
 \chapter{基于语法树的文档级关系抽取实验结果}
+
+\section{文档级关系抽取抽取数据集说明}
+
+\section{DocRED数据集实验结果说明与分析}
+
+\section{医学数据集实验结果说明与分析}
+
+\section{两种不同的语法树权重分析}
+
+\section{依赖语法树路径距离分析}
+
+\section{消融实验结果说明与分析}
+
+\section{本章小结}
 \newpage
 1
 \newpage
 \chapter{结论}
+1
 \begin{comment}
     在工作总结的基础上，经过分析、归纳，明确结论：
 ①系统功能、指标等是否实现或达到课题要求（工程技
@@ -116,11 +168,9 @@ also: 图表的标注先写在图表的上方，明天再次询问这个问题
 \thesisacknowledgement
 在攻读计算机学士学位期间，首先热烈感谢我的导师康昭教授。经过风风雨雨的研究，我得到了他的无私关怀和支持。在此特别表达感谢之情。我还要感谢我的一直以来的帮助者们，包括学院的老师、同学、同事，以及所有支持和关心我的人。我也要感谢我的家人，他们给予我强大的内心支持和生活的安定和稳定。
 
-\thesisappendix
-
-
 % Uncomment to list all the entries of the database.
-
+%\bibliography command
+%\nocite{*}
 \thesisbibliography{reference}
 
 %
