--- a/main.tex
+++ b/main.tex
@@ -56,33 +56,42 @@
 % 两页
 
 % 关系抽取介绍，包括背景和最近从句子级转移到文档级关系抽取
+关系提取是信息提取中的一项关键任务，旨在对非结构化文本中实体对之间的关系模式进行建模。
+它有两种特定的场景：句子级关系提取和文档级关系提取。
+与句子级关系提取 \cite{sentenceRE-Dixit, sentenceRE-Lyu} 不同，文档级关系提取涉及识别和提取句子边界以外的实体之间的关系，为分析提供了更广泛的上下文，并且更具挑战性。
+这项任务可以从非结构化的大型文档（如科学论文、法律合同或新闻文章） \cite{delaunay2023comprehensive} 中自动构建和填充知识库，以更好地理解实体之间的关系。
+因此，文档级关系提取更好地满足了实际需求，最近受到了越来越多的关注。\par
 
 % 现在关系抽取的主要方法和存在的一些缺陷
 
+文档级关系抽取的目标是识别在同一文档内的实体对之间的关系。
+这是一项复杂的任务，因为它需要理解句子的内容并处理多个句子之间的交互。
+由于文档级关系抽取涉及多个句子，现在的研究有三个主要障碍 \cite{9098945}：
+\begin{enumerate}
+    \item \em{数量更多的潜在关系}: 相比于单个句子，一个文档中包含的实体数量更多。
+    由于我们需要预测每两个实体之间的关系，因此潜在的待预测关系随着实体的增加呈指数级别增加。
+    \item \em{处理实体共指}: 一个实体通常在一个句子中只出现一次，而在一个文档中，它可以以多种形式出现多次。例如，在图3的句子2和句子3中，"He"是"Marcus Miller"的共同指称。
+    \item \em{处理长距离关系}: 在文档级关系抽取中，我们通常需要预测跨句子之间的关系，这可能会导致实体对之间距离过长。
+    然而，长句中通常包含不相关甚至有噪声的信息。Huang等人\cite{huang-etal-2021-three} 认为，在大多数情况下，最多只需要三个句子作为识别关系的支持证据。此外，这项工作指出，句子之间的重要性差异很大。不包含任何有价值的信息或关系的句子实际上阻碍了文档的理解。这也是我们这篇论文要解决的主要工作。
+\end{enumerate}
+
+图 \ref{fig_example}是一个例子，它包括来自同一文档中的句子级关系和文档级关系。
+为了推断"Marcus Miller"和"Herbie Hancock"之间的关系，模型应该能够排除不相关实体的影响，并找出句子3中的"he"一词指的是"Marcus Miller"。
+然而，由于现有的文档级关系提取模型 \cite{bai-etal-2021-syntax} 经常会被大量不相关的信息所淹没，从而无法捕捉到类似的关键信息。 \par
+
+由于以上这些原因，本文提出了新的一种文档级关系提取方法，通过融合语法信息作为辅助，来改进文档级关系提取。\par
+
+\begin{figure}[h]
+    \centering
+    \label{fig_example}
+    \includegraphics[width=0.8\textwidth]{misc/fig_example.pdf}
+    \caption{文档级关系抽取的一个例子。图片上方是文档内容，文档中实体用不同的颜色标注，下方是文档级关系抽取的结果。}
+\end{figure}
+
+\section{研究的主要贡献与创新}
 % 语法方法是如何帮助文档级关系抽取的，我们的方法大体是怎么做的
 
 % 总结，我们的贡献
-
-关系提取是信息提取中的一项关键任务，旨在对非结构化文本中实体对之间的关系模式进行建模。
-有两种特定的场景：句子级关系提取和文档级关系提取。
-与句子级关系提取 \cite{sentenceRE-Dixit, sentenceRE-Lyu} 不同，文档级关系提取识别文档中实体对之间的关系标签。
-因此，文档级关系提取更好地满足了实际需求，最近受到了越来越多的关注。\par
-
-文档级关系提取面临的一个巨大障碍是推断长句中实体对的关系，这是因为长句中通常包含不相关甚至有噪声的信息。
-图 \ref{fig_exam}是一个例子，它包括一对来自同一文档中的句子级关系和文档级关系。
-为了推断Louis Chollet和Conservatoire de Paris之间的关系，模型应该能够排除不相关实体的影响，并找出句子2中的“He”一词指的是“Louis Cholet”。
-然而，由于现有的文档级关系提取模型 \cite{bai-etal-2021-syntax} 经常会被大量不相关的信息所淹没，从而无法捕捉到类似的关键信息。 \par
-
-
-最近，预训练语言模型在许多下游任务中显示出巨大的潜力。
-一些工作\cite{ye-etal-2020-co-ferential, zhou2021document}试图通过预训练语言模型隐含地捕捉到实体之间的这种交互，但是最近的研究 \cite{sundaraman2019syntax, bai-etal-2021-syntax, liu2023document} 表明通过预训练语言模型隐式学习的交互与黄金标记之间仍然存在很大差距。
-因此，对于文档级关系提取，隐含地学习一个有指导意义的上下文是不够的。
-而语法信息在句子级关系提取 \cite{xu-etal-2016-improved, qin-etal-2021-relation} 中得到了广泛的应用，但在文档级关系提取的场景下尚未得到充分的探索。
-因此本文通过融合语法信息作为辅助，来改进文档级关系提取。\par
-
-\section{研究的主要内容}
-
-\section{研究的主要贡献与创新}
 
 \section{研究的结构安排}
 
