--- a/main.tex
+++ b/main.tex
@@ -74,6 +74,11 @@
     \item \em{处理长距离关系}: 在文档级关系抽取中，我们通常需要预测跨句子之间的关系，这可能会导致实体对之间距离过长。
     然而，长句中通常包含不相关甚至有噪声的信息。Huang等人\cite{huang-etal-2021-three} 认为，在大多数情况下，最多只需要三个句子作为识别关系的支持证据。此外，这项工作指出，句子之间的重要性差异很大。不包含任何有价值的信息或关系的句子实际上阻碍了文档的理解。这也是我们这篇论文要解决的主要工作。
 \end{enumerate}
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{misc/fig_example.pdf}
+    \caption{文档级关系抽取的一个例子。图片上方是文档内容，文档中实体用不同的颜色标注，下方是文档级关系抽取的结果。}
+\end{figure}\label{fig_example}
 
 图 \ref{fig_example}是一个例子，它包括来自同一文档中的句子级关系和文档级关系。
 为了推断"Marcus Miller"和"Herbie Hancock"之间的关系，模型应该能够排除不相关实体的影响，并找出句子3中的"he"一词指的是"Marcus Miller"。
@@ -81,17 +86,32 @@
 
 由于以上这些原因，本文提出了新的一种文档级关系提取方法，通过融合语法信息作为辅助，来改进文档级关系提取。\par
 
-\begin{figure}[h]
-    \centering
-    \label{fig_example}
-    \includegraphics[width=0.8\textwidth]{misc/fig_example.pdf}
-    \caption{文档级关系抽取的一个例子。图片上方是文档内容，文档中实体用不同的颜色标注，下方是文档级关系抽取的结果。}
-\end{figure}
-
 \section{研究的主要贡献与创新}
 % 语法方法是如何帮助文档级关系抽取的，我们的方法大体是怎么做的
+本文主要处理文档级关系提取的长距离关系。
+由于长句中通常包含无关甚至嘈杂的信息 \cite{gupta2019neural}, 对于文档级关系提取来说，隐含地学习指导性上下文是不够的 \cite{bai-etal-2021-syntax}。
+最近的一些文章通过预训练模型和注意力机制来学习文档中复杂的交互 \cite{huang-etal-2021-three， y2020-coreferential, zhou2021document}， 他们通过创建更复杂、更强大的变体transformer来隐含的捕获实体之间复杂的互动。
+但是，更多的方法通过显示捕获实体互动信息来改善文档级关系抽取。他们首先构建由不同节点组成的文档图 （例如实体的提及节点，实体节点，句子节点或者文档节点） \cite{GAIN, liu2023document} ，将指导性上下文转化为图。
+由于语法信息可以通过提供显式语法细化和子内容建模来帮助文档级关系抽取 \cite{duan-etal-2022-just}，最近的研究 \cite{sahu2019inter, SagDRE} 采用依赖图来合并语法信息和结构上下文。
+他们发现一个精心设计的图形可以帮助模型更好的捕获实体互动信息，缩短实体之间的距离。
+然而，正如 \cite{sundararaman2019syntax, bai-etal-2021-syntax}所指出的，尽管预训练模型是用大量真实世界的文本数据进行训练的，但隐式学习的语法与黄金语法之间仍然存在很大差距。
+事实上，语法信息在句子级关系抽取中得到了广泛的应用\cite{xu-etal-2016-improved, qin-etal-2021-relation}，但在文档级关系抽取场景下尚未得到充分的探索。\par
+
+为了充分利用文档中的语法信息，本文融合了依存语法和依赖语法。
+我们主要采用依赖图和依存树来合并额外的语法信息，并使用依存树中的信息来进一步增强依赖图的表示。
+依赖语法描述了一个句子中单词之间的依赖关系，这些依赖关系对原始纯文本有很强的补充作用。
+而依存语法可以分层合理地组织单个句子的不同单词，消除了枚举不同单词组合的过程，同时保持了分层语法信息。
+在树形深度学习模块 \cite{duan-etal-2022-just} 的帮助下，我们可以收集具有适当权重的所有子内容，以解决句间依赖关系并融合依赖语法产生最终关系预测。\par
 
 % 总结，我们的贡献
+
+通过对三个公共文档级关系抽取数据集 （DocRED \cite{DOCRED}、CDR \cite{li2016biocreative} 和GDA \cite{GDA} ）的广泛实验下，我们证明我们的算法在很大程度上优于现有方法。
+我们在这篇文章中的主要贡献可以总结如下：
+\begin{enumerate}
+    \item 我们建议利用依存语法树来聚合句子级信息，以弥补依赖语法树中的差距，并通过添加文档节点来改进依赖图，以减少实体对的距离，简化长句交互。
+    \item 我们分别用Tree-LSTM和GCN处理转化后的依赖语法和依存语法，并设置一个可学习的参数来调整它们的权重。
+    \item 实验结果表明，我们的模型在三个公共文档级关系抽取数据集上的测试优于现有方法，特别是在DocRED上，我们的模型将最先进方法的IgnF1提高了至少1.56\%
+\end{enumerate}
 
 \section{研究的结构安排}
 
