--- a/main.tex
+++ b/main.tex
@@ -76,8 +76,8 @@
 \end{enumerate}
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.8\textwidth]{misc/fig_example.pdf}
     \caption{文档级关系抽取的一个例子。图片上方是文档内容，文档中实体用不同的颜色标注，下方是文档级关系抽取的结果。}
+    \includegraphics[width=0.8\textwidth]{misc/fig_example.pdf}
 \end{figure}\label{fig_example}
 
 图 \ref{fig_example}是一个例子，它包括来自同一文档中的句子级关系和文档级关系。
@@ -114,7 +114,7 @@
 \end{enumerate}
 
 \section{研究的结构安排}
-
+本研究的后续方式组织： 第二章主要介绍文档级关系抽取的研究现状，在这一章中，我们对过往的研究结果进行总结。第三章介绍我们的研究工作，包括我们依赖语法和依存语法的使用方式，以及如何调节这两种语法的权重。第四章报告了我们研究的实验结果，包括在三个公共文档级关系抽取数据集上的不同指标的分数，与过往研究的分数对比以及分析；同时包括了对我们方法的每个模块的分析。
 \begin{comment}
     课题的方案论证，包括课题的主要任务，功能要求，性能指标等
     课题的工作
@@ -200,14 +200,14 @@ also: 图表的标注先写在图表的上方，明天再次询问这个问题
 % Uncomment to list all the entries of the database.
 %\bibliography command
 %\nocite{*}
-\thesisbibliography{reference}
+%\thesisbibliography{reference}
 
 %
 % Uncomment following codes to load bibliography database with native
 %\bibliography command.
 
-%\bibliographystyle{thesis-uestc}
-%\bibliography{reference}
+\bibliographystyle{thesis-uestc}
+\bibliography{reference}
 
 
 %\thesistranslationoriginal
