--- a/main.tex
+++ b/main.tex
@@ -89,9 +89,9 @@
 \section{研究的主要贡献与创新}
 % 语法方法是如何帮助文档级关系抽取的，我们的方法大体是怎么做的
 本文主要处理文档级关系提取的长距离关系。
-由于长句中通常包含无关甚至嘈杂的信息 \cite{gupta2019neural}, 对于文档级关系提取来说，隐含地学习指导性上下文是不够的 \cite{bai-etal-2021-syntax}。
-最近的一些文章通过预训练模型和注意力机制来学习文档中复杂的交互 \cite{huang-etal-2021-three， y2020-coreferential, zhou2021document}， 他们通过创建更复杂、更强大的变体transformer来隐含的捕获实体之间复杂的互动。
-但是，更多的方法通过显示捕获实体互动信息来改善文档级关系抽取。他们首先构建由不同节点组成的文档图 （例如实体的提及节点，实体节点，句子节点或者文档节点） \cite{GAIN, liu2023document} ，将指导性上下文转化为图。
+由于长句中通常包含无关甚至嘈杂的信息 \cite{gupta2019neural}，对于文档级关系提取来说，隐含地学习指导性上下文是不够的 \cite{bai-etal-2021-syntax}。
+最近的一些文章通过预训练模型和注意力机制来学习文档中复杂的交互 \cite{huang-etal-2021-three, y2020-coreferential, zhou2021document}， 他们通过创建更复杂、更强大的变体transformer来隐含的捕获实体之间复杂的互动。
+但是，更多的方法通过显示捕获实体互动信息来改善文档级关系抽取。他们首先构建由不同节点组成的文档图 （例如实体的提及节点，实体节点，句子节点或者文档节点） \cite{GAIN, liu2023document}，将指导性上下文转化为图。
 由于语法信息可以通过提供显式语法细化和子内容建模来帮助文档级关系抽取 \cite{duan-etal-2022-just}，最近的研究 \cite{sahu2019inter, SagDRE} 采用依赖图来合并语法信息和结构上下文。
 他们发现一个精心设计的图形可以帮助模型更好的捕获实体互动信息，缩短实体之间的距离。
 然而，正如 \cite{sundararaman2019syntax, bai-etal-2021-syntax}所指出的，尽管预训练模型是用大量真实世界的文本数据进行训练的，但隐式学习的语法与黄金语法之间仍然存在很大差距。
@@ -126,17 +126,64 @@
 also: 图表的标注先写在图表的上方，明天再次询问这个问题
 \end{comment}
 \chapter{关系抽取研究}
-
-\section{句子级关系抽取}
-% 一页，回顾关系抽取的历史和句子级关系抽取的方法
-
-\section{文档级关系抽取}
-
-\subsection{文档级关系抽取的预测目标}
+在这一部分，我们首先对关系抽取进行定义。
+然后我们介绍对文档级关系方法的回顾。
+\section{关系抽取的定义}
 % 一页
 
+在这篇文章中，我们遵循Zhang等人提出的定义 \cite{zhang-etal-2020-document}。
+对于每个预测任务，我们有文档$D=\{S_i\}_{i=1}^{n_s}$和实体集合$E=\{e_i\}_{i=1}^{n_e}$。
+其中$n_s$是文档中句子的数量，$n_e$是实体的数量，在句子级关系抽取中$n_s$被固定为1，但是在文档级关系抽取中没有限制。
+文档中的句子被表示为$S_i=\{w_j\}_{j=1}^{n_w^j}$，其中$w_i$是第$i$个句子中的第$j$个单词。
+每一个实体被表示为$E_i=\{m_j\}_{j=1}^{n_w^j}$，其中$m_i$是第$i$个实体中的第$j$个提及。
+在句子级别设置中，一个实体只由一个提及表示，即$\forall i \in [1, n_e], e_i = m_i$， 但是在在文档级关系抽取中情况并非如此，其中实体可以通过多次提及来表示。
+为了获得实体的固定表示，以前的方法首先对所有提及的嵌入进行平均，即 $e_i = \frac{\sum_{j=1}^{n_m^j} m_j}{n_m^i}$，或者对所有提及的嵌入进行最大池化。
+然而，现在的方法都使用更加柔和的logsumexp表示，即 $e_i = \log \sum_{j=1}^{n_m^j} \exp(m_j)$，这样可以促进来自弱提及信息的积累 \cite{jia-etal-2019-document}。
+我们也采用这种方式表示每一个实体。\par
+
+文档级关系抽取的目标是正确推断每个实体对$(e_s,e_o)_{s,o = 1, 2, \dots, n_e}; s \neq o$之间的关系。
+其中$e_s$是头实体， $e_o$是尾实体。
+预测的关系是预定义的关系集合$R$或者$NA$（没有关系）的子集。
+
+\section{文档级关系抽取}
+本节介绍了文档级关系抽取的最新进展，重点介绍基于序列的，基于注意力机制的和基于语法树的文档级关系抽取方法，并分析他们的优缺点。
+
 \subsection{基于序列的文档级关系抽取}
-% 三页
+执行文档级关系提取的一种方法是将文档视为一个长的增强的序列，并应用从句子级关系抽取导出的序列模型来识别特定实体之间的关系。
+
+\subsubsection{基于卷积神经网络的文档级关系抽取}
+Gu等人 \cite{10.1093/database/bax024}通过两个分离的模型来提取关系。
+他们首先将最大熵系统用于句子间的预测，卷积神经网络模型用于句子内的预测。
+然后，这两个结果被合并以获得文档级别的关系。
+此外，他们还定义了一些启发式规则来从摘要中提取关系，例如将论文标题中提到的所有化学物质（或如有必要，将摘要中最频繁的化学物质）与摘要中提及的所有疾病相关联。\par
+
+李等人 \cite{li2018chemical}
+使用递归分段卷积神经网络进行化关系提取，并结合了领域知识、分段策略、注意力机制和多实例学习。
+该方法首先利用分段卷积神经网络来捕获单个实例的表示。
+然后，使用递归神经网络来聚合实例的表示，从而能够为实体对形成全面的文档级表示。
+
+\subsubsection{结合卷积神经网络和递归神经网络的文档级关系抽取}
+Mandya等人 \cite{mandya2018combining}提出了一种长短期记忆和卷积神经网络的组合模型，该模型利用单词嵌入和位置嵌入来提取跨句子的$n$元关系。
+长短期记忆模型将结合单词嵌入和位置特征的变换矢量表示作为输入，将输出被馈送到卷积神经网络中。
+卷积神经网络被用来提取最重要的特征。
+这种方法的优点是独立于复杂的句法特征，如依赖树、共指消解或话语特征。因此被广泛应用到后续的改进模型中。
+
+为了提取基因-疾病相关性，Wu等人 \cite{wu2019renet}还在其方法中结合了门控神经单元。
+在这里，卷积神经网络首先使用具有不同宽度的不同滤波器从单词表示中计算句子表示，以捕捉不同的特征。
+然后，门控神经单元将它们转换为文档表示。
+通过消融实验，他们发现，即使单独的卷积神经网络也可能捕捉到文档的一些重要特征，而额外的门控神经单元层可以提高其性能。
+这项研究后来被Su等人 \cite{renet2} 进行了扩展。
+在Wu等人的系统之前引入了部分过滤步骤，来删除不包含任何实体对信息和模糊关系的段落。
+
+\subsubsection{以实体为中心的文档级关系抽取}
+在传统的句子级关系抽取中，对提及元组进行分类预测就已经足够了，但是在文档级关系抽取中却不是这样。
+因为任何实体都可能有多次提及，应用简单的提及级别分类方法会使模型在大量的提及中淹没，导致预测失败。
+为了解决这个问题，Jia等人 \cite{jia-etal-2019-document} 提出通过对每个实体元组进行单一关系预测，使用以实体为中心的多尺度预测。它们通过对实体的所有上述表示应用logsumexp来获得实体表示。
+
+\subsubsection{基于序列的文档级关系抽取总结}
+这些方法通过将文档视为一个长的增强的序列，将句子级关系抽取的方法自然的映射到文档级关系抽取上。
+这些方法的优点是能够处理长文档，并且能够利用跨句子的关系信息。
+然而，当待预测实体对涉及到处理长距离并需要多跳推理上下文内容时，这些模型不可避免地会遇到挑战。
 
 \subsection{基于注意力机制的文档级关系抽取}
 % 三页
@@ -165,21 +212,54 @@ also: 图表的标注先写在图表的上方，明天再次询问这个问题
 \newpage
 1
 \newpage
+
+
 \chapter{基于语法树的文档级关系抽取实验结果}
+为了全面的评估我们的模型，我们在来自不同领域的三个文档级数据集上评估了我们的算法模型。
+我们在第 \ref{sec:dataset}节介绍了这些模型，在第 \ref{sec:docred}和 \ref{sec:medical}节说明了我们的结果。
+然后，我们在第 \ref{sec:weight}节分析了两种不同的语法树权重，在第 \ref{sec:distance}节分析了依赖语法树路径距离。
+最后，我们在第 \ref{sec:inter}节进行了消融实验，并总结了我们的研究结果。
 
-\section{文档级关系抽取抽取数据集说明}
+\section{文档级关系抽取抽取数据集说明}\label{sec:dataset}
 
-\section{DocRED数据集实验结果说明与分析}
+\begin{table}[h]
+    \caption{三个公共数据集的统计数据}
+    \begin{tabular}{cccc}
+    \hline
+    统计数据               & DocRED & CDR & GDA   \\ \hline
+    \# 训练集                 & 3053   & 500 & 23353 \\
+    \# 验证集                   & 1000   & 500 & 5839  \\
+    \# 测试集                  & 1000   & 500 & 1000  \\
+    \# 关系数量             & 96     & 2   & 2     \\
+    \# 平均每篇文章的句子数量 & 8.0    & 9.7 & 10.2  \\ \hline
+    \end{tabular}
+\end{table} \label{table:datasets}
 
-\section{医学数据集实验结果说明与分析}
+我们在三个公共数据集上评估了我们的模型，表 \ref{table:datasets}列出了这些数据集的统计数据。
+\begin{itemize}
+    \item \textbf{DocRED} \cite{DOCRED} 是一个从维基百科中人为标注的大型数据集。
+    它包含从维基百科中采样的5053个黄金注释文档，132275个实体、56354个关系事实和96个关系类，每篇平均长度为196.7个单词，超过40.7\%的关系对是跨句关系事实。
+    实体部分包括经典的实体标签，如PERSON、ORGANIZATION和LOCATION；而实体关系部分使用了96种关系类型，涵盖了广泛的科目， 包括科学（33.3\%）、艺术（11.5\%）、时间（8.3\%）、个人生活（4.2\%）等。
+    \item \textbf{CDR} \cite{li2016biocreative} 是一个生物医学的文档级关系抽取数据集，由1500篇PubMed的摘要组成。
+    这些摘要被随机分为三个相等的部分进行训练、验证和测试。
+    这个数据集的预测任务是预测化学品和疾病之间的二元关系。
+    \item \textbf{GDA} \cite{GDA} 
+    也是一个生物医学的文档级关系抽取数据集，包含30192篇摘要。
+    这个大型数据集是通过对公开数据库收集的基因-疾病关联中的30192篇摘要（测试集为1000篇，其余按80:20的比例在训练集和验证集之间划分）进行远程监督构建的。
+    这个数据集的预测任务是预测基因和疾病之间的二元关系。
+\end{itemize}
 
-\section{两种不同的语法树权重分析}
+\section{DocRED数据集实验结果说明与分析}\label{sec:docred}
 
-\section{依赖语法树路径距离分析}
+\section{医学数据集实验结果说明与分析}\label{sec:medical}
 
-\section{消融实验结果说明与分析}
+\section{两种不同的语法树权重分析}\label{sec:weight}
 
-\section{本章小结}
+\section{依赖语法树路径距离分析}\label{sec:distance}
+
+\section{消融实验结果说明与分析}\label{sec:inter}
+
+\section{本章小结}\label{sec:conclusion}
 \newpage
 1
 \newpage
